--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "*"
 pylint-django = "*"
 django-bootstrap5 = "*"
+django-bootstrap-datepicker-plus = "*"
 
 [dev-packages]
 autopep8 = "*"
